[package]
name = "plant-reaper"
homepage = "https://github.com/Jacudibu/plant-reaper"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
leafwing-input-manager = "0.11.2"
bevy_screen_diagnostics = "0.4.0"
bevy_ecs_tilemap = "0.12"
noise = "0.8.2"

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
